fixed align again align

--- a/style/kana_drill.css
+++ b/style/kana_drill.css
@@ -22,12 +22,14 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	align-content: center;
 	list-style-type: none;
 	list-style-position: inside;
 	width: 70vw;
 }
 
 #root li {
+	text-align: center;
 	align-content: center;
 	width: 20%;
 	margin: 8px 4px;
